[package]
name = "cef2hashmap"
description = "A Simple CEF Parser to a HashMap"
version = "0.1.0"
authors = ["Marirs <marirs@gmail.com>"]
include = ["src", "assets"]
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
