[package]
name = "cef2hashmap"
description = "A Simple CEF Parser to a HashMap"
version = "0.1.1"
authors = ["Marirs <marirs@gmail.com>"]
keywords = ["cef", "json", "event"]
categories = ["parsing"]
exclude = ["examples"]
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/marirs/cef2hashmap-rs"
repository = "https://github.com/marirs/cef2hashmap-rs"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
